mountall (0.1.2ubuntu1) UNRELEASED; urgency=low

  * mount.ntfs and mount.ntfs-3g do not support the standard "-n" (no mtab)
    mount option, and error when passed.  Since the ntfs code is rather
    complex, and seems safe against failing to write to mtab, work around
    it in mountall and never pass -n to mount for ntfs and ntfs-3g
    filesystems 

 -- Scott James Remnant <scott@ubuntu.com>  Tue, 15 Sep 2009 02:18:36 +0100

mountall (0.1.2) karmic; urgency=low

  * Unconditionally configure.

 -- Scott James Remnant <scott@ubuntu.com>  Tue, 15 Sep 2009 01:27:49 +0100

mountall (0.1.1) karmic; urgency=low

  * Fix build issue due to libnih being symlinks. 

 -- Scott James Remnant <scott@ubuntu.com>  Tue, 15 Sep 2009 00:56:12 +0100

mountall (0.1.0) karmic; urgency=low

  * Initial release.

 -- Scott James Remnant <scott@ubuntu.com>  Mon, 14 Sep 2009 23:21:05 +0100